
* Syntax of document antiquotation @{rail} now uses \<newline> instead
of "\\", to avoid the optical illusion of escaped backslash within
string token.  Minor INCOMPATIBILITY.

* Lexical syntax (inner and outer) supports text cartouches with
arbitrary nesting, and without escapes of quotes etc.  The Prover IDE
supports input methods via ` (backquote), or << and >> (double angle
brackets).


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Auxiliary files ('ML_file' etc.) are managed by the Prover IDE.
Open text buffers take precedence over copies within the file-system.

* Improved support for Isabelle/ML, with jEdit mode "isabelle-ml" for
auxiliary ML files.

* Improved completion based on context information about embedded
languages: keywords are only completed for outer syntax, symbols or
antiquotations for languages that support them.  E.g. no symbol
completion for ML source, but within ML strings, comments,
antiquotations.

* Semantic completions may get extended by appending a suffix of
underscores to an already recognized name, e.g. "foo_" to complete
"foo" or "foobar" if these are known in the context.  The special
identifier "__" serves as a wild-card in this respect: it completes to
the full collection of names from the name space (truncated according
to the system option "completion_limit").

* Document panel: simplied interaction where every single mouse click
(re)opens document via desktop environment or as jEdit buffer.

* Option "jedit_print_mode" (see also "Plugin Options / Isabelle /
General") allows to specify additional print modes for the prover
process, without requiring old-fashioned command-line invocation of
"isabelle jedit -m MODE".

* New panel: Simplifier trace.  Provides an interactive view of the
simplification process, enabled by the newly-introduced
"simplifier_trace" declaration.


*** Pure ***

* Low-level type-class commands 'classes', 'classrel', 'arities' have
been discontinued to avoid the danger of non-trivial axiomatization